Refactor code : use String.isBlank() to check empty or only whitespaces